{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 28,
  "lineage": "e582c44d-9730-c7bc-c08f-05a98894339e",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/prod-chatbot23-backend-alb/264b4cf2e61a7a52",
            "arn_suffix": "app/prod-chatbot23-backend-alb/264b4cf2e61a7a52",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-chatbot23-backend-alb-390353531.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/prod-chatbot23-backend-alb/264b4cf2e61a7a52",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-chatbot23-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-077e2358401d1610f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fc2c3701c19ab4f"
              },
              {
                "subnet_id": "subnet-0f500d9018de21772"
              }
            ],
            "subnets": [
              "subnet-00fc2c3701c19ab4f",
              "subnet-0f500d9018de21772"
            ],
            "vpc_id": "vpc-0c5eae0624a39156d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ALB.aws_security_group.internal_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internet_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/prod-chatbot23-frontend-alb/429c18c28da32ca3",
            "arn_suffix": "app/prod-chatbot23-frontend-alb/429c18c28da32ca3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-chatbot23-frontend-alb-1331667257.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/prod-chatbot23-frontend-alb/429c18c28da32ca3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-chatbot23-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b164b4fb9a38204e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fc2c3701c19ab4f"
              },
              {
                "subnet_id": "subnet-0f500d9018de21772"
              }
            ],
            "subnets": [
              "subnet-00fc2c3701c19ab4f",
              "subnet-0f500d9018de21772"
            ],
            "vpc_id": "vpc-0c5eae0624a39156d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ALB.aws_security_group.internet_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/prod-chatbot23-backend-alb/264b4cf2e61a7a52/4ba69db76dabea33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/prod-chatbot23-backend-tg/a3e0c4f615b43fed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/prod-chatbot23-backend-alb/264b4cf2e61a7a52/4ba69db76dabea33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/prod-chatbot23-backend-alb/264b4cf2e61a7a52",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb.internal_alb",
            "module.ALB.aws_lb_target_group.internal_alb_tg",
            "module.ALB.aws_security_group.internal_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internet_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/prod-chatbot23-frontend-alb/429c18c28da32ca3/53dd12d9a5718210",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/prod-chatbot23-frontend-tg/41e15a45466ce818",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/prod-chatbot23-frontend-alb/429c18c28da32ca3/53dd12d9a5718210",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/prod-chatbot23-frontend-alb/429c18c28da32ca3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb.internet_alb",
            "module.ALB.aws_lb_target_group.internet_alb_tg",
            "module.ALB.aws_security_group.internet_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/prod-chatbot23-backend-tg/a3e0c4f615b43fed",
            "arn_suffix": "targetgroup/prod-chatbot23-backend-tg/a3e0c4f615b43fed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/prod-chatbot23-backend-tg/a3e0c4f615b43fed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-chatbot23-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internet_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/prod-chatbot23-frontend-tg/41e15a45466ce818",
            "arn_suffix": "targetgroup/prod-chatbot23-frontend-tg/41e15a45466ce818",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/forgot-password",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/prod-chatbot23-frontend-tg/41e15a45466ce818",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-chatbot23-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-06aed83d0560c59c3",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-077e2358401d1610f"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aed83d0560c59c3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077e2358401d1610f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "prod-chatbot-db-security-group20250206061151243200000005",
            "name_prefix": "prod-chatbot-db-security-group",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-chatbot-db-security-group"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-chatbot-db-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_security_group.internal_alb_sg",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-0d455b7314c3f7eea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d455b7314c3f7eea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b164b4fb9a38204e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b164b4fb9a38204e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-frontend-app-sg-20250206061151252200000006",
            "name_prefix": "prod-frontend-app-sg-",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-app-sg-"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-app-sg-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_security_group.internet_alb_sg",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-077e2358401d1610f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077e2358401d1610f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod-backend-alb-sg-20250206061148245600000004",
            "name_prefix": "prod-backend-alb-sg-",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-backend-alb-sg-"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-backend-alb-sg-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internet_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-0b164b4fb9a38204e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b164b4fb9a38204e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-frontend-alb-sg-20250206061148245400000003",
            "name_prefix": "prod-frontend-alb-sg-",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-alb-sg-"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-alb-sg-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff1718ab11c90985",
            "arn": "arn:aws:ec2:ap-south-1:905418236735:elastic-ip/eipalloc-0ff1718ab11c90985",
            "association_id": "eipassoc-0f9d8a3be19dd0388",
            "domain": "vpc",
            "id": "eipalloc-0ff1718ab11c90985",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0aced4fbe3c331050",
            "private_dns": "ip-172-16-0-117.ap-south-1.compute.internal",
            "private_ip": "172.16.0.117",
            "public_dns": "ec2-13-200-28-85.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.28.85",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:internet-gateway/igw-093b572127fbcb811",
            "id": "igw-093b572127fbcb811",
            "owner_id": "905418236735",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff1718ab11c90985",
            "association_id": "eipassoc-0f9d8a3be19dd0388",
            "connectivity_type": "public",
            "id": "nat-0afe27efd8066c76e",
            "network_interface_id": "eni-0aced4fbe3c331050",
            "private_ip": "172.16.0.117",
            "public_ip": "13.200.28.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f500d9018de21772",
            "tags": {
              "Name": "prod-NatGateway"
            },
            "tags_all": {
              "Name": "prod-NatGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f91963326516042e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0afe27efd8066c76e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f91963326516042e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-093b572127fbcb811",
            "id": "r-rtb-0d97bec3cb1cd940a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d97bec3cb1cd940a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:route-table/rtb-0f91963326516042e",
            "id": "rtb-0f91963326516042e",
            "owner_id": "905418236735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0afe27efd8066c76e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-PrivateRouteTable"
            },
            "tags_all": {
              "Name": "prod-PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:route-table/rtb-0d97bec3cb1cd940a",
            "id": "rtb-0d97bec3cb1cd940a",
            "owner_id": "905418236735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093b572127fbcb811",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-PublicRouteTable"
            },
            "tags_all": {
              "Name": "prod-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9381ffa27e16b5d",
            "route_table_id": "rtb-0f91963326516042e",
            "subnet_id": "subnet-0d517b076a12023dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1b014d68fd6e305",
            "route_table_id": "rtb-0f91963326516042e",
            "subnet_id": "subnet-0f46a8f88bf6c6979"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074ea4f00e571f634",
            "route_table_id": "rtb-0d97bec3cb1cd940a",
            "subnet_id": "subnet-0f500d9018de21772"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c35eb728e93e75a",
            "route_table_id": "rtb-0d97bec3cb1cd940a",
            "subnet_id": "subnet-00fc2c3701c19ab4f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-0d517b076a12023dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d517b076a12023dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-subnet-1"
            },
            "tags_all": {
              "Name": "prod-private-subnet-1"
            },
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-0f46a8f88bf6c6979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46a8f88bf6c6979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-subnet-2"
            },
            "tags_all": {
              "Name": "prod-private-subnet-2"
            },
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-0f500d9018de21772",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f500d9018de21772",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-public-subnet-1"
            },
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-00fc2c3701c19ab4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fc2c3701c19ab4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-public-subnet-2"
            },
            "vpc_id": "vpc-0c5eae0624a39156d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chatbot-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:vpc/vpc-0c5eae0624a39156d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/22",
            "default_network_acl_id": "acl-0ae5c57b1ae33dd76",
            "default_route_table_id": "rtb-0199fe4f6885f43e6",
            "default_security_group_id": "sg-071ad914c1fd4c8f9",
            "dhcp_options_id": "dopt-00b2ed938bf1915db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5eae0624a39156d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0199fe4f6885f43e6",
            "owner_id": "905418236735",
            "tags": {
              "Name": "prod-ChatbotVPC"
            },
            "tags_all": {
              "Name": "prod-ChatbotVPC"
            }
          }
        }
      ]
    }
  ]
}